syntax = "proto3";

package wire;

enum Const {
	Zero = 0;
	MaxRequestHeaderLen = 1024;
}

message RequestHeader{
    uint64 id = 1;
    string method = 2;

    uint32 raw_request_len = 3;
	uint32 snappy_compressed_request_len = 4;
	uint32 checksum = 5;
}

message ResponseHeader {
	uint64 id = 1;
	string error = 2;

	uint32 raw_response_len = 3;
	uint32 snappy_compressed_response_len = 4;
	uint32 checksum = 5;
}
